# mlformolecules

./: pyproject.toml
week0/: python-intro.ipynb
week1/: exercise02_solution.qmd
week1/.ipynb_checkpoints/: exercise02-checkpoint.ipynb
week2/: exercise_03.ipynb  exercise_solution.html  exercise_solution.qmd  exercise_solution.quarto_ipynb
week2/models/: model_0.pt  model_1.pt  model_10.pt  model_11.pt  model_12.pt  model_13.pt  model_14.pt  model_15.pt  model_16.pt  model_17.pt  model_18.pt  model_19.pt  model_2.pt  model_20.pt  model_21.pt  model_22.pt  model_23.pt  model_24.pt  model_25.pt  model_26.pt  model_27.pt  model_28.pt  model_29.pt  model_3.pt  model_30.pt  model_31.pt  model_32.pt  model_33.pt  model_34.pt  model_35.pt  model_36.pt  model_37.pt  model_38.pt  model_39.pt  model_4.pt  model_40.pt  model_41.pt  model_42.pt  model_43.pt  model_44.pt  (+60 more)
week3/: classification_accuracies.npy  classification_accuracies_cnn.npy  cnn.pt  exercise_solution_04.html  exercise_solution_04.qmd  losses.npy  losses_cnn.npy  mlp.pt
week3/.ipynb_checkpoints/: exercise_04-checkpoint.ipynb
week4/: attention_mnist_utils.py  exercise_05.ipynb  exercise_05_solution.html  exercise_05_solution.qmd  losses.pt  transformer.pt
week5/: 06_exercise.ipynb  06_exercise_solution.html  06_exercise_solution.qmd
week6/: exercise_07.ipynb
week6/.ipynb_checkpoints/: utils-checkpoint.py
