[project]
name = "mlformolcules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.23.0",
    "ipython>=8.28.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.1.2",
    "scikit-learn>=1.5.2",
    "torch>=2.4.1",
    "torchmetrics>=1.4.3",
    "torchvision>=0.19.1",
    "sympy>=1.13.3",
]
